<resources>
    <string name="app_name">RepoFinder</string>
    <string name="url">URL репозитория</string>
    <string name="owner_login">Логин автора</string>
    <string name="repository_name">Название репозитория</string>
    <string name="like_icon_description">Добавить в избранное</string>
    <string name="repository_avatar">Аватар репозитория</string>
    <string name="enter_search_query">Поиск репозитория GitHub</string>
    <string name="search">Поиск</string>
</resources>