<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">


    <ImageView
        android:id="@+id/repoAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/repository_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4pt"
        android:contentDescription="@string/repository_name"
        android:clickable="true"
        android:focusable="true"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/repoAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repoOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4pt"
        android:layout_marginEnd="4pt"
        android:contentDescription="@string/owner_login"
        app:layout_constraintStart_toEndOf="@+id/repoAvatar"
        app:layout_constraintTop_toBottomOf="@id/repoName" />

    <TextView
        android:id="@+id/repoUrl"
        android:layout_width="293dp"
        android:layout_height="18dp"
        android:layout_marginStart="4pt"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/url"
        app:layout_constraintStart_toEndOf="@id/repoAvatar"
        app:layout_constraintTop_toBottomOf="@id/repoOwner" />

    <ImageView
        android:id="@+id/likedImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2pt"
        android:focusable="true"
        android:clickable="true"
        android:contentDescription="@string/like_icon_description"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>